# quat

./: .gitignore  CHANGELOG.md  README.md  demo_quaternion.py  demo_real_matrix.py  kernels.py  pyproject.toml  qsmm.py  quat.rar  quaternion.py
.github/workflows/: publish.yml
data/: __init__.py  loader.py
docs/: api.rst  conf.py  index.rst  quat.core.rst  quat.linalg.rst  quat.optimized.rst  quat.serialization.rst  quat.stats.rst  quat.utils.rst
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quat.algebra.html  quat.collections.html  quat.core.html  quat.interpolate.html  quat.linalg.html  quat.optimized.html  quat.random.html  quat.serialization.html  quat.signal.html  quat.utils.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  index.doctree  quat.algebra.doctree  quat.collections.doctree  quat.core.doctree  quat.interpolate.doctree  quat.linalg.doctree  quat.optimized.doctree  quat.random.doctree  quat.serialization.doctree  quat.signal.doctree  quat.utils.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: quat.algebra.rst.txt  quat.collections.rst.txt  (+3 more)
docs/superpowers/plans/: 2026-06-21-quat-package-refactor.md  2026-06-26-add-to-numpy-method.md  2026-06-26-signal-processing-module.md  2026-06-27-design-patterns-refactor.md
docs/superpowers/specs/: 2026-06-21-quat-package-refactor-design.md  2026-06-26-add-to-numpy-method-design.md  2026-06-26-signal-processing-module-design.md  2026-06-27-design-patterns-refactor.md
examples/: 01_quickstart.py  02_rotation.py  03_signal_filtering.py  04_stats.py  05_full_demo.py  06_real_matrix.py  07_algebra.py  08_conversions.py
quat/: __init__.py  _arrayops.py  _checks.py  _serialize.py  algebra.py  collections.py  core.py  distance.py  interpolate.py  kinematics.py  linalg.py  mean.py  optimized.py  random.py  serialization.py  signal.py  stats.py  utils.py
quat/algorithms/: __init__.py  kernels.py  solver.py
quat/data/: __init__.py  converter.py  loader.py
quat_numpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_algebra.py  test_benchmark.py  test_collections.py  test_core.py  test_distance.py  test_interpolate.py  test_kernels.py  test_kinematics.py  test_linalg.py  test_mean.py  test_optimized.py  test_random.py  test_serialization.py  test_signal.py  test_solver.py  test_stats.py  test_utils.py
(+9 files in other folders)
