[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quat-numpy"
version = "1.0.0b2"
description = "Quaternion algebra library with vector/matrix/tensor collections, linear algebra (SVD), interpolation (SLERP/squad), signal processing (QFFT/QConv), distance metrics, kinematics, statistics, and optimized einsum kernels."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{name = "gealachlee", email = "gealachlee@users.noreply.github.com"}]
dependencies = ["numpy>=1.21"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
data = ["scipy>=1.7", "Pillow>=9.0", "scikit-learn>=1.0"]

[project.urls]
homepage = "https://github.com/gealachlee/quat"
repository = "https://github.com/gealachlee/quat"

[tool.setuptools.packages.find]
where = ["."]
include = ["quat", "quat.*"]
